gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    cert-manager.io/cluster-issuer: mainissuer

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.kreato.dev`)
      priority: 10
      services:
        - kind: Service
          name: gatus
          namespace: gatus
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    secretName: wildcard-kreato.dev-tls

    domains:
      - main: status.kreato.dev
